--- a/public/views/settings.html
+++ b/public/views/settings.html
@@ -3,6 +3,9 @@
     <div class="page-header">
       <h1>Settings</h1>
     </div>
+    <h2>{{user.city}}</h2>
+    <h2>{{user.state}}</h2>
+    <h2>{{user.fullName}}</h2>
     <!-- TODO After authentication I can update my settings to store my full name, city, and state. -->
   </div>
 </div>
