--- a/public/views/myBooks.html
+++ b/public/views/myBooks.html
@@ -1,7 +1,7 @@
-<div class="row">
+<div class="row" class="white">
   <div class="col-xs-6 col-xs-offset-3">
     <div class="page-header">
-      <h1>My Books</h1>
+      <h1 class="white">My Books</h1>
     </div>
   </div>
 </div>
