--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,26 +1,26 @@
-<div class="row">
+<div class="row" >
   <div class="col-xs-6 col-xs-offset-3">
     <div class="page-header">
-      <h1>Login</h1>
+      <h1 class="white">Login</h1>
     </div>
     <form name="loginForm" ng-submit="login(account)">
-      <div class="form-group">
+      <div class="form-group white">
         <label>Email</label>
         <input type="email" class="form-control" name="email" placeholder="Insert Email" ng-model="account.email" required>
       </div>
-      <div class="form-group">
+      <div class="form-group white">
         <label>Password</label>
         <input type="password" class="form-control" name="password" placeholder="Insert Password" ng-model="account.password" required>
       </div>
-      <span ng-show="showErrorAlert" class="alert">
+      <span ng-show="showErrorAlert" class="red">
         <p>Uh oh! {{errorAlert}}</p>
       </span>
       <div>
         <button ng-disabled="loginForm.$invalid" class="btn btn-lg btn-success" type="submit">Login</button>
       </div>
     </form>
-    <div style="margin-top: 15px;">
-      <span>Need to create an account? <a href="/signup">Sign Up</a>!</span>
+    <div class="margin-top-15 white">
+      <span>Need to create an account? <a href="/signup"><u>Sign Up</u></a>!</span>
     </div>
   </div>
 </div>
