--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -1,33 +1,33 @@
-<div class="row">
+<div class="row" class="white">
   <div class="col-xs-6 col-xs-offset-3">
     <div class="page-header">
-      <h1>Sign Up</h1>
+      <h1 class="white">Sign Up</h1>
     </div>
     <form name="signupForm" ng-submit="signup(account)">
-      <div class="form-group">
+      <div class="form-group white">
         <label>Email</label>
         <input type="email" class="form-control" name="email" placeholder="Insert Email" ng-model="account.email" required>
       </div>
-      <div class="form-group">
+      <div class="form-group white">
         <label>Password</label>
         <input type="password" class="form-control" name="password" placeholder="Insert Password" ng-model="account.password" required>
       </div>
-      <div class="form-group">
+      <div class="form-group white">
         <label>Repeat Password</label>
-        <span ng-show="showPasswordAlert" class="alert">
+        <span ng-show="showPasswordAlert" class="red">
           <p>Uh oh, it looks like the two passwords are not the same!</p>
         </span>
         <input type="password" class="form-control" name="password_repeat" placeholder="Repeat Password" ng-model="account.repeatPassword" required>
       </div>
-      <span ng-show="showErrorAlert" class="alert">
+      <span ng-show="showErrorAlert" class="red">
         <p>Uh oh, it looks like this email is already taken. Try with a different one or <a href="/login">Login here</a>!</p>
       </span>
       <div>
         <button ng-disabled="signupForm.$invalid || submitted" class="btn btn-lg btn-success" type="submit">Sign Up</button>
       </div>
     </form>
-    <div style="margin-top: 15px;">
-      <span>You already have an account? <a href="/login">Login</a>!</span>
+    <div class="margin-top-15 white">
+      <span>You already have an account? <a href="/login"><u>Login</u></a>!</span>
     </div>
   </div>
 </div>
