--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -8,6 +8,23 @@
         <label>Email</label>
         <input type="email" class="form-control" name="email" placeholder="Insert Email" ng-model="account.email" required>
       </div>
+
+      <div class="form-group white">
+        <label>Full Name</label>
+        <input type="text" class="form-control" name="fullName" placeholder="Insert Full Name" ng-model="account.fullName" required>
+      </div>
+
+      <div class="form-group white">
+        <label>City</label>
+        <input type="text" class="form-control" name="city" placeholder="Insert City" ng-model="account.city" required>
+      </div>
+
+      <div class="form-group white">
+        <label>State</label>
+        <input type="text" class="form-control" name="state" placeholder="Insert State" ng-model="account.state" required>
+      </div>
+
+
       <div class="form-group white">
         <label>Password</label>
         <input type="password" class="form-control" name="password" placeholder="Insert Password" ng-model="account.password" required>
