--- a/public/views/myBooks.html
+++ b/public/views/myBooks.html
@@ -1,9 +1,8 @@
 <div class="row" class="white">
   <div class="col-xs-6 col-xs-offset-3">
     <div class="page-header">
-      <h1 class="white">Add a Book</h1>
+      <h1 class="white">Add a book to your collection using the search feature.</h1>
     </div>
-    <h2 class="white">Add a book to your collection using the search feature.</h2>
     <h3 class="red" ng-show="showAlert">This book is already in your collection</h3>
     <form>
       <div class="input-group input-group-lg" align="center" id="search">
@@ -12,7 +11,6 @@
           <button class="btn btn-default" type="submit" ng-click="search(searchString)"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
         </span>
       </div>
-
     </form>
     <div class="panel panel-default" id="resultsDisplayer" ng-hide="books.length <= 0">
       <div class="panel-body" ng-repeat="book in books">
@@ -29,9 +27,12 @@
     <div class="page-header" ng-hide="myBooks.length <= 0">
       <h1 class="white">My Books</h1>
     </div>
-    <div ng-class="{'opacity' : showOpacity}" ng-mouseover="showOpacity = true" ng-mouseleave="showOpacity = false"  ng-repeat="book in myBooks">
-      <img id="myBooks" src="{{book.image}}" class="border white float-left" />
-      <a ng-click="removeBook($index)" href="#" id="removeButton" class="border-thin red" ng-show="showOpacity">&nbsp;Remove&nbsp;</a>
+    <div class="book" ng-mouseover="showMenu = true" ng-mouseleave="showMenu = false"  ng-repeat="book in myBooks">
+      <img ng-class="{'opacity' : showMenu}" src="{{book.image}}" class="white float-left" />
+      <div class="buttons">
+        <a ng-click="removeBook($index, book)" href="#" class="white border-thin" ng-show="showMenu">&nbsp;Remove&nbsp;</a>
+      </div>
+      <p class="book-title white">{{book.title}}</p>
     </div>
-  </div>&nbsp;
+  </div>
 </div>
