--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -1,5 +1,5 @@
 <div class="row" class="white">
-  <div class="col-xs-6 col-xs-offset-3">
+  <div class="col-md-2 col-md-offset-5">
     <div class="page-header">
       <h1 class="white">Sign Up</h1>
     </div>
