--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,5 +1,5 @@
 <div class="row" >
-  <div class="col-md-2 col-md-offset-5">
+  <div class="col-md-4 col-md-offset-4">
     <div class="page-header">
       <h1 class="white">Login</h1>
     </div>
@@ -16,7 +16,7 @@
         <p>Uh oh! {{errorAlert}}</p>
       </span>
       <div>
-        <button ng-disabled="loginForm.$invalid" class="btn btn-lg btn-success" type="submit">Login</button>
+        <a href="#" ng-disabled="loginForm.$invalid" ng-click="login(account)" class="blue border bigFont">&nbsp;Login&nbsp;</a>
       </div>
     </form>
     <div class="margin-top-15 white">
