--- a/public/views/settings.html
+++ b/public/views/settings.html
@@ -5,51 +5,51 @@
     </div>
     <div id="changeName">
       <div class="col-md-8 white">
-        <p class="mediumFont">Full name: {{user.fullName}}</p>
+        <p class="mediumFont">Full name: {{fullName}}</p>
       </div>
       <div class="col-md-4 white mediumFont">
-        <a href="#" ng-click="showChangeName = true; showChangeCity = false; showChangeState = false" ng-hide="showChangeName" class="float-right border-thin">&nbsp;Change name&nbsp;</a>
+        <a href="#" ng-click="showChangeName = true; showChangeCity = false; showChangeState = false" ng-hide="showChangeName" class="float-right border-thin">&nbsp;CHANGE NAME&nbsp;</a>
       </div>
       <div class="col-md-12 margin-bottom-20" ng-show="showChangeName">
         <div class="col-md-10">
           <input type="text" class="form-control" name="fullName" placeholder="New name" ng-model="fullName" required>
         </div>
         <div class="col-md-2">
-          <a href="#" ng-click="save('name', fullName)" class="border-thin green mediumFont" type="submit">&nbsp;Save&nbsp;</a>
+          <a href="#" ng-click="save('name', fullName)" class="border-thin green mediumFont" type="submit">&nbsp;SAVE&nbsp;</a>
         </div>
       </div>
     </div>
 
     <div id="changeCity">
       <div class="col-md-8 white">
-        <p class="mediumFont">City: {{user.city}}</p>
+        <p class="mediumFont">City: {{city}}</p>
       </div>
       <div class="col-md-4 white mediumFont">
-        <a href="#" ng-click="showChangeCity = true; showChangeName = false; showChangeState = false" ng-hide="showChangeCity" class="float-right border-thin">&nbsp;Change city&nbsp;</a>
+        <a href="#" ng-click="showChangeCity = true; showChangeName = false; showChangeState = false" ng-hide="showChangeCity" class="float-right border-thin">&nbsp;CHANGE CITY&nbsp;</a>
       </div>
       <div class="col-md-12 margin-bottom-20" ng-show="showChangeCity">
         <div class="col-md-10">
           <input type="text" class="form-control" name="city" placeholder="New city" ng-model="city" required>
         </div>
         <div class="col-md-2">
-          <a href="#" ng-click="save('city', city)" ng-disabled="changeCity.$invalid" class="border-thin green mediumFont">&nbsp;Save&nbsp;</a>
+          <a href="#" ng-click="save('city', city)" ng-disabled="changeCity.$invalid" class="border-thin green mediumFont">&nbsp;SAVE&nbsp;</a>
         </div>
       </div>
     </div>
 
     <div id="changeState">
       <div class="col-md-8 white">
-        <p class="mediumFont">State: {{user.state}}</p>
+        <p class="mediumFont">State: {{state}}</p>
       </div>
       <div class="col-md-4 white mediumFont">
-        <a href="#" ng-click="showChangeState = true; showChangeName = false; showChangeCity = false" ng-hide="showChangeState" class="float-right border-thin">&nbsp;Change state&nbsp;</a>
+        <a href="#" ng-click="showChangeState = true; showChangeName = false; showChangeCity = false" ng-hide="showChangeState" class="float-right border-thin">&nbsp;CHANGE STATE&nbsp;</a>
       </div>
       <div class="col-md-12 margin-bottom-20" ng-show="showChangeState">
         <div class="col-md-10">
           <input type="text" class="form-control" name="state" placeholder="New state" ng-model="state" required>
         </div>
         <div class="col-md-2">
-          <a href="#" ng-click="save('state', state)" ng-disabled="changeState.$invalid" class="border-thin green mediumFont" type="submit">&nbsp;Save&nbsp;</a>
+          <a href="#" ng-click="save('state', state)" ng-disabled="changeState.$invalid" class="border-thin green mediumFont" type="submit">&nbsp;SAVE&nbsp;</a>
         </div>
       </div>
     </div>
