--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -1,5 +1,5 @@
 <div class="row" class="white">
-  <div class="col-md-2 col-md-offset-5">
+  <div class="col-md-4 col-md-offset-4">
     <div class="page-header">
       <h1 class="white">Sign Up</h1>
     </div>
@@ -36,11 +36,11 @@
         </span>
         <input type="password" class="form-control" name="password_repeat" placeholder="Repeat Password" ng-model="account.repeatPassword" required>
       </div>
-      <span ng-show="showErrorAlert" class="red">
+      <span ng-show="showErrorAlert" class="red mediumFont">
         <p>Uh oh, it looks like this email is already taken. Try with a different one or <a href="/login">Login here</a>!</p>
       </span>
       <div>
-        <button ng-disabled="signupForm.$invalid || submitted" class="btn btn-lg btn-success" type="submit">Sign Up</button>
+        <a href="#" ng-disabled="signupForm.$invalid || submitted" ng-click="signup(account)" class="border green bigFont">&nbsp;Sign Up&nbsp;</a>
       </div>
     </form>
     <div class="margin-top-15 white">
