--- a/public/views/login.html
+++ b/public/views/login.html
@@ -16,7 +16,7 @@
         <p>Uh oh! {{errorAlert}}</p>
       </span>
       <div>
-        <a href="#" ng-disabled="loginForm.$invalid" ng-click="login(account)" class="blue border bigFont">&nbsp;Login&nbsp;</a>
+        <a href="#" ng-disabled="loginForm.$invalid" ng-click="login(account)" class="blue border bigFont">&nbsp;LOGIN&nbsp;</a>
       </div>
     </form>
     <div class="margin-top-15 white">
