--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -40,7 +40,7 @@
         <p>Uh oh, it looks like this email is already taken. Try with a different one or <a href="/login">Login here</a>!</p>
       </span>
       <div>
-        <a href="#" ng-disabled="signupForm.$invalid || submitted" ng-click="signup(account)" class="border green bigFont">&nbsp;Sign Up&nbsp;</a>
+        <a href="#" ng-disabled="signupForm.$invalid || submitted" ng-click="signup(account)" class="border green bigFont">&nbsp;SIGNUP&nbsp;</a>
       </div>
     </form>
     <div class="margin-top-15 white">
