--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,11 +2,16 @@
   <div class="col-xs-6 col-xs-offset-3">
     <div class="header">
       <h1 class="bigFont white">Books</h1>
+        <div class="bigFont white">
+          <span>Browse through {{booksAmount}} books in our catalogue!</span>
+        </div>
       <div id="loggedOutHome" ng-hide="userLoggedIn" class="bigFont white">
-        <span class="border"><a href="/login">&nbsp;Login </a></span>
-        <span>&nbsp;or </span>
-        <span class="border"><a href="/signup">&nbsp;Signup </a></span>
-        <span>&nbsp;to browse our {{booksAmount}} books NOW!</span>
+        <div>
+          <span class="border"><a href="/login">&nbsp;Login </a></span>
+          <span>&nbsp;or </span>
+          <span class="border"><a href="/signup">&nbsp;Signup </a></span>
+          <span>&nbsp;to trade books NOW!</span>
+        </div>
       </div>
       <div id="arrowDown" align="center" ng-hide="userLoggedIn">
         <a href="#" ng-click="showBooks()"><img height="" width="400" src="img/arrow_down.png" /></a>
@@ -23,7 +28,7 @@
             <a id="removeBookLink" ng-click="removeBook(book)" href="#" class="white border-thin" ng-show="showMenu && userEmail == book.owner && userLoggedIn">&nbsp;Remove&nbsp;</a>
           </div>
           <p class="book-title white">{{book.title}}</p>
-        </div>      
+        </div>
       </div>
     </div>
   </div>
