--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,7 +1,7 @@
 <div class="row" >
   <div class="col-md-4 col-md-offset-4">
-    <div class="page-header">
-      <h1 class="white">Login</h1>
+    <div class="header">
+      <h1 class="bigFont white">Login</h1>
     </div>
     <form name="loginForm" ng-submit="login(account)">
       <div class="form-group white">
@@ -15,8 +15,8 @@
       <span ng-show="showErrorAlert" class="red">
         <p>Uh oh! {{errorAlert}}</p>
       </span>
-      <div>
-        <a href="#" ng-disabled="loginForm.$invalid" ng-click="login(account)" class="blue border bigFont">&nbsp;LOGIN&nbsp;</a>
+      <div class="margin-top-30">
+        <a href="#" ng-disabled="loginForm.$invalid" ng-click="login(account)" class="blue border mediumFont padding-15">&nbsp;Login&nbsp;</a>
       </div>
     </form>
     <div class="margin-top-15 white">
